<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="44dp"
			android:gravity="center"
			android:paddingEnd="12dp"
			android:paddingStart="12dp">

			<TextView
				android:layout_width="93dp"
				android:layout_height="wrap_content"
				android:text="@string/register_usernumber_text"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>

			<TextView
				android:id="@+id/register_usernumber"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:paddingEnd="10dp"
				android:paddingStart="0dp"
				android:textColor="@color/middle_gray"
				android:textColorHint="@color/edit_introduce_color"
				android:textSize="14sp"/>

			<TextView
				android:id="@+id/register_change_usernumber"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/ic_tran_button"
				android:gravity="center"
				android:padding="7dp"
				android:text="@string/register_change_usernumber"
				android:textColor="@color/primary_color"/>
		</LinearLayout>

		<View style="@style/person_split_margin_left_right"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="44dp"
			android:gravity="center"
			android:paddingEnd="12dp"
			android:paddingStart="12dp">

			<TextView
				android:layout_width="93dp"
				android:layout_height="wrap_content"
				android:text="@string/register_phone_text"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>

			<cn.antke.bct.widget.ClearEditText
				android:id="@+id/register_phone"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@color/transparent"
				android:hint="@string/register_input_phone"
				android:inputType="number"
				android:paddingEnd="10dp"
				android:paddingStart="0dp"
				android:textColor="@color/middle_gray"
				android:textColorHint="@color/edit_introduce_color"
				android:textSize="14sp"/>
		</LinearLayout>

		<View style="@style/person_split_margin_left_right"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="44dp"
			android:gravity="center"
			android:paddingEnd="12dp"
			android:paddingStart="12dp">

			<TextView
				android:layout_width="93dp"
				android:layout_height="wrap_content"
				android:text="@string/login_password_text"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>

			<cn.antke.bct.widget.ClearEditText
				android:id="@+id/register_password"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@color/transparent"
				android:hint="@string/register_input_password"
				android:maxLength="6"
				android:paddingEnd="10dp"
				android:paddingStart="0dp"
				android:textColor="@color/middle_gray"
				android:textColorHint="@color/edit_introduce_color"
				android:textSize="14sp"/>
		</LinearLayout>

		<View style="@style/person_split_margin_left_right"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="44dp"
			android:gravity="center"
			android:paddingEnd="12dp"
			android:paddingStart="12dp">

			<TextView
				android:layout_width="93dp"
				android:layout_height="wrap_content"
				android:text="@string/register_verify_code_text"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>

			<cn.antke.bct.widget.ClearEditText
				android:id="@+id/register_verify_code"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@color/transparent"
				android:hint="@string/register_input_verify_code"
				android:inputType="number"
				android:paddingEnd="10dp"
				android:paddingStart="0dp"
				android:textColor="@color/middle_gray"
				android:textColorHint="@color/edit_introduce_color"
				android:textSize="14sp"/>

			<TextView
				android:id="@+id/register_get_verify_code"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/ic_tran_button"
				android:gravity="center"
				android:padding="7dp"
				android:text="@string/register_get_verify_code"
				android:textColor="@color/primary_color"/>
		</LinearLayout>

		<View style="@style/person_split_margin_left_right"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="44dp"
			android:gravity="center"
			android:paddingEnd="12dp"
			android:paddingStart="12dp">

			<TextView
				android:layout_width="93dp"
				android:layout_height="wrap_content"
				android:text="@string/register_recommend_code_text"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>

			<cn.antke.bct.widget.ClearEditText
				android:id="@+id/register_recommendnumber"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@color/transparent"
				android:hint="@string/register_input_recommend_code"
				android:paddingEnd="10dp"
				android:paddingStart="0dp"
				android:textColor="@color/middle_gray"
				android:textColorHint="@color/edit_introduce_color"
				android:textSize="14sp"/>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:orientation="horizontal"
		android:paddingBottom="3dp"
		android:paddingEnd="12dp"
		android:paddingStart="12dp"
		android:paddingTop="3dp">

		<CheckBox
			android:id="@+id/register_service_protocal_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:button="@drawable/register_service_protocal_button"
			android:checked="true"/>

		<TextView
			android:id="@+id/register_service_protocal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:text="@string/register_service_protocal"
			android:textColor="@color/text_introduce_color"/>
	</LinearLayout>


	<TextView
		android:id="@+id/register_confirm"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_marginEnd="15dp"
		android:layout_marginStart="15dp"
		android:layout_marginTop="42dp"
		android:background="@drawable/ic_button"
		android:enabled="false"
		android:gravity="center"
		android:text="@string/login_register"
		android:textColor="@color/white"/>
</LinearLayout>