<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/primary_color"
		android:orientation="vertical"
		android:paddingEnd="12dp"
		android:paddingStart="12dp">
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/consumer_red_integral"
			android:textSize="15sp"
			android:textColor="@color/white"
			android:layout_marginTop="25dp"/>
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="25dp">
			<TextView
				android:id="@+id/consumer_service_account_integral"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="2356积分"
				android:textSize="45sp"
				android:textColor="@color/white"/>

			<TextView
				android:id="@+id/consumer_service_charge_integral"
				android:layout_width="120dp"
				android:layout_height="44dp"
				android:text="@string/consumer_red_integral_charge"
				android:background="@drawable/ic_button_white"
				android:gravity="center"
				android:layout_centerVertical="true"
				android:textColor="@color/white"
				android:textSize="15sp"
				android:layout_alignParentEnd="true"/>
		</RelativeLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_marginTop="30dp"
			android:layout_marginBottom="11dp">
			<TextView
				android:id="@+id/consumer_service_time_start"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="开始时间2016-12-12"
				android:textColor="@color/light_grey"
				android:textSize="12sp"/>
			<TextView
				android:id="@+id/consumer_service_time_end"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="开始时间2016-12-12"
				android:textColor="@color/light_grey"
				android:layout_marginStart="10dp"
				android:textSize="12sp"/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="44dp"
		android:orientation="horizontal"
		android:background="@color/white">
		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:textSize="15sp"
			android:gravity="center"
			android:text="@string/consumer_detail_time"
			android:textColor="@color/middle_gray"/>
		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:textSize="15sp"
			android:gravity="center"
			android:text="@string/consumer_detail_detail"
			android:textColor="@color/middle_gray"/>
		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:textSize="15sp"
			android:gravity="center"
			android:text="@string/consumer_detail_change"
			android:textColor="@color/middle_gray"/>
	</LinearLayout>
	<com.common.widget.FootLoadingListView
		android:id="@+id/consumer_service_list"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"/>
	<TextView
		android:id="@+id/consumer_service_renew"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_alignParentBottom="true"
		android:background="@color/primary_color"
		android:gravity="center"
		android:text="@string/consumer_service_renew"
		android:textColor="@color/white"
		android:textSize="16sp"/>
</LinearLayout>