<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:fresco="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="161dp">

		<com.facebook.drawee.view.SimpleDraweeView
			android:id="@+id/store_detail_pic"
			android:layout_width="match_parent"
			android:layout_height="161dp"
			fresco:actualImageScaleType="fitCenter"/>

		<ImageView
			android:id="@+id/store_detail_add"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:src="@drawable/store_detail_add"/>
	</RelativeLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:background="@color/white"
		android:orientation="vertical"
		android:paddingEnd="12dp"
		android:paddingStart="12dp">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="44dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:text="@string/store_name"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>

			<TextView
				android:id="@+id/store_detail_name"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_alignParentEnd="true"
				android:gravity="center_vertical"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>
		</RelativeLayout>

		<View style="@style/person_split_match"/>

		<LinearLayout
			android:id="@+id/personinfo_receiver_address_ll"
			android:layout_width="match_parent"
			android:layout_height="44dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:text="@string/store_bulletin"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>

			<TextView
				android:id="@+id/store_detail_bulletin"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_marginEnd="0dp"
				android:layout_marginStart="20dp"
				android:layout_weight="1"
				android:drawableEnd="@drawable/list_more"
				android:drawablePadding="5dp"
				android:gravity="center_vertical|end"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>
		</LinearLayout>

		<View style="@style/person_split_match"/>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="44dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:text="@string/register_recommend_phone"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>

			<TextView
				android:id="@+id/store_detail_phone"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_alignParentEnd="true"
				android:gravity="center_vertical"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>
		</RelativeLayout>

		<View style="@style/person_split_match"/>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="44dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:text="@string/person_address_position"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>

			<TextView
				android:id="@+id/store_detail_area"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_alignParentEnd="true"
				android:gravity="center_vertical"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>
		</RelativeLayout>

		<View style="@style/person_split_match"/>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="44dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:text="@string/address"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>

			<TextView
				android:id="@+id/store_detail_address"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_alignParentEnd="true"
				android:gravity="center_vertical"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>
		</RelativeLayout>
	</LinearLayout>


</LinearLayout>