<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

	<LinearLayout
		android:id="@+id/bond_account_ll"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/primary_color"
		android:orientation="vertical"
		android:paddingEnd="12dp"
		android:paddingStart="12dp">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="25dp"
			android:text="@string/bond"
			android:textColor="@color/white"
			android:textSize="15sp"/>

		<TextView
			android:id="@+id/bond_account"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="50dp"
			android:layout_marginTop="25dp"
			android:text="3000张"
			android:textColor="@color/white"
			android:textSize="45sp"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@color/white"
		android:paddingStart="12dp"
		android:layout_below="@+id/bond_account_ll"
		android:paddingEnd="12dp">
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="44dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:text="@string/register_usernumber_text"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>

			<TextView
				android:id="@+id/bond_usercode"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_alignParentEnd="true"
				android:gravity="center_vertical"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>
		</RelativeLayout>

		<View style="@style/person_split_match"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="44dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:text="@string/bond_multi_function"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>

			<EditText
				android:id="@+id/bond_multi_function"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_marginEnd="0dp"
				android:layout_marginStart="20dp"
				android:layout_weight="1"
				android:background="@null"
				android:ellipsize="end"
				android:gravity="center_vertical|end"
				android:maxLines="1"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>
		</LinearLayout>

		<View style="@style/person_split_match"/>
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="44dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:text="@string/bond"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>

			<TextView
				android:id="@+id/bond_bond"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_alignParentEnd="true"
				android:gravity="center_vertical"
				android:textColor="@color/middle_gray"
				android:textSize="14sp"/>
		</RelativeLayout>
	</LinearLayout>
	<TextView
		android:id="@+id/bond_exchange"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_alignParentBottom="true"
		android:background="@color/primary_color"
		android:gravity="center"
		android:text="@string/bond_exchange"
		android:textColor="@color/white"
		android:textSize="16sp"/>
</RelativeLayout>